--- a/index.html
+++ b/index.html
@@ -51,33 +51,37 @@
         </div>
       </div>
     </header>
-
-    <!-- HEADER ENDS -->
-    <section class="hero">
-      <div class="overlay">
-        <div class="one overlays"></div>
-        <div class="two overlays"></div>
-        <div class="three overlays"></div>
+    <div class="banner">
+      <div class="banner__image-wrapper">
+        <div class="banner__image"></div>
+        <ul class="banner__small-icons">
+          <li>
+            <img src="./images/crystal.png" alt="">
+          </li>
+        </ul>
+        <div class="overlay"></div>
       </div>
-      <div class="wrapper">
-        <div class="hero__content">
-          <h2>From Crop to Cup</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetuer adips cing elit, sed diam
-            nonummy nibh euismod tinci
-          </p>
-          <button class="btn-primary">Learn More</button>
+      <div class="banner__text">
+        <h1><span class='outline-text'>astral</span></h1>
+        <h1 class="next-text"> meeting</h1>
+        </h1>
+        <div class="content">
+          <p>we invite you to discover the
+            fascinating world of astrology</p>
         </div>
       </div>
-    </section>
+    </div>
+
+    <!-- HEADER ENDS -->
+
     <div class="coffee-section">
       <div class="coffee-wrap">
+        <div class="sticky-image">
+          <img src="./images/coffee-sticky.jpg" alt="">
+        </div>
         <div class="non-sticky-columns">
           <img src="./images/cofee1.jpg" alt=""><img src="./images/coffee.jpg" alt=""><img src="./images/coffee.jpg"
             alt="">
-        </div>
-        <div class="sticky-image">
-          <img src="./images/coffee-sticky.jpg" alt="">
         </div>
       </div>
     </div>
